--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
