--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
