--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "sequelize": "^6.37.3",
+    "uuid": "^10.0.0",
     "ws": "^8.18.0"
   }
 }
