--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://103.54.143.110:3000",
   "eslintConfig": {
     "extends": [
       "react-app",
