--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name localhost;
+    server_name quaythuxsmb.net www.quaythuxsmb.net;
 
     # Root directory for serving the static files
     location / {
