add flatted module

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "flatted": "^3.3.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-datetime-picker": "^6.0.1",
