--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "flatted": "^3.3.1",
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "sequelize": "^6.37.3",
