--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,12 @@ services:
       - mysql
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        REACT_APP_WEBSOCKET_URL_USER: ${REACT_APP_WEBSOCKET_URL_USER}
+        REACT_APP_WEBSOCKET_URL_ADMIN: ${REACT_APP_WEBSOCKET_URL_ADMIN}
+        REACT_APP_API_URL: ${REACT_APP_API_URL}
     ports:
       - "8081:80"
     networks:
